fix: About Grid layout issues

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -22,11 +22,11 @@
   }
 }
 
-// INFO STYLINGG
+// INFO STYLING
 .about_info {
   display: grid;
-  grid-template-columns: repeat(2, 200px);
-  gap: 1rem;
+  grid-template-columns: repeat(1, 100px);
+  // gap: 1rem;
   justify-content: center;
 
   @include tablet {
@@ -59,7 +59,7 @@
 }
 
 .about_description {
-  padding: 0.5rem 2rem 0 0;
+  padding: 1rem 0;
   font-weight: 600;
   text-align: center;
 
@@ -75,24 +75,24 @@
 }
 
 .about_grid {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 .3rem;
   width: 100%;
 
   display: grid;
-  grid-template-columns: 380px 1fr;
-  gap: 3rem;
-  align-items: start;
+  grid-template-columns: 250px 1fr; // adjust the first column width as needed
+  gap: 2rem;
+  // align-items: start;
 
   @include minidesktop {
-    grid-template-columns: 320px 1fr;
-    gap: 2.5rem;
+    grid-template-columns: 280px 1fr;
+    gap: 1.2rem;
   }
 
   @include tablet {
     // grid-template-columns: 1fr;
-    gap: 1.5rem;
+    gap: 1.2rem;
     padding: 0 1.25rem;
   }
 
@@ -123,11 +123,16 @@
 
   .img {
     width: 100%;
-    aspect-ratio: 3 / 4;
+    aspect-ratio: 4 / 5;
+    //  max-height: 360px;
     background: var(--bg-secondary);
     border-radius: 18px;
     border: 1px solid var(--border-color);
     overflow: hidden;
+
+@include minidesktop {
+      max-width: 320px;
+    }
 
     @include tablet {
       max-width: 240px;
@@ -275,8 +280,8 @@
 
 .exp_card {
   background: var(--bg-secondary);
-  padding: 1.4rem;
-  border-radius: 14px;
+  padding: 1rem;
+  border-radius: 12px;
   border: 1px solid var(--border-color);
   transition: transform 0.25s ease, box-shadow 0.25s ease;
 
@@ -302,7 +307,7 @@
 
   h4 {
     margin-bottom: 0.5rem;
-    font-size: 1rem;
+    font-size: 0.9rem;
     color: var(--text-primary);
     font-weight: 600;
 
@@ -323,7 +328,7 @@
   }
 
   p {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     line-height: 1.5;
     color: var(--text-secondary);
 
